JSX and Python Implementation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"server": "python -m SimpleHTTPServer"
 	},
 	"dependencies": {
-		"react": "^15.0.2",
-		"react-native": "^0.26.3"
+		"react": "15.0.2",
+		"react-native": "0.26.3",
+		"undefined": "^0.1.0"
 	}
 }
